@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  21 Nov 2015; Christoph Junghans <ottxor@gentoo.org> -Manifest,
+  -fftw-3.3.4-r1.ebuild:
+  virtual/mpi: bye bye mpi multilib version
+
   13 Apr 2015; Justin Lecher <jlec@gentoo.org> fftw-3.3.4-r1.ebuild:
   sci-libs/fftw: Drop emul package support
 
